--- a/style.css
+++ b/style.css
@@ -14,48 +14,48 @@ html {
 
 .mountain1{
     bottom: 2px;
-    width: 1500px;
+    width: 100%;
     right: 0;
     z-index: 19;
 }
 
 .mountain2{
-    width: 1500px;
+    width: 100%;
     bottom: 3px;
     right: 0;
     z-index: 18;
 }
 
 .mountain3{
-    width: 1500px;
+    width: 100%;
     bottom: 2px;
     right: 0;
     z-index: 18;
 }
 
 .mountain4{
-    width: 1500px;
+    width: 100%;
     bottom: 2px;
     right: 0;
     z-index: 18;
 }
 
 .mountain5{
-    width: 1500px;
+    width: 100%;
     bottom: 2px;
     right: 0;
     z-index: 18;
 }
 
 .mountain6{
-    width: 1500px;
+    width: 100%;
     bottom: 2px;
     right: 0;
     z-index: 18;
 }
 
 .sky{
-    width: 1500px;
+    width: 100%;
     bottom: 2px;
     right: 0;
     z-index: 18;
